# Amari

./: CMakeLists.txt
src/: Amari.cpp  Amari.h
